--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     </head>
     <body>
         <div class="imgbox">
-        <h1 class ="center-fit">Andrew Tate's TOP G</h1>
+        <h1 class ="center-fit">__Image Below__</h1>
         <img class="center-fit" src="/uploads/image.jpg" alt = "ChatGPT_Image">
         </div>
     </body>
