--- a/templates/project_1.html
+++ b/templates/project_1.html
@@ -93,7 +93,7 @@
                     predictionResult.style.color = "red";
                 } else if (message === "Likely Pneumonia") {
                     predictionResult.style.color = "grey";
-                } else if (message === "Healthy") {
+                } else if (message === "No Pneumonia") {
                     predictionResult.style.color = "green";
                 } else {
                     predictionResult.style.color = "black";
